add role admin ,librarian,reader for JavaFX